# kube-controller-api

./: .gitignore  go.mod  go.sum  main.go
client/python/: controller_api.py  controller_pb2.py  controller_pb2.pyi  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py  reconciler_pb2.py
controllerpb/: controller.pb.go  controller_methods.go  manager.pb.go  manager_grpc.pb.go  reconciler.pb.go  reconciler_methods.go
examples/: client.py  example-crd.yaml
manager/: dynamic_client.go  reconciler_adapter.go  server.go
names/: constraints.go  hash.go  hash_test.go  join.go  join_test.go
proto/: Makefile
proto/controller/: controller.proto  manager.proto  reconciler.proto
proto/kube_controller_api/: controller.proto  manager.proto  reconciler.proto
python/: Pipfile  README.md  pyproject.toml
python/src/: example.py
python/src/kube_controller_api/: client.py  controller_pb2.py  controller_pb2.pyi  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py  reconciler_pb2.py  reconciler_pb2.pyi
