[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "kube-controller-api"
version = "0.0.5"
authors = [
    { name="Anthony Yeh", email="enisoc@enisoc.dev" },
]
description = "Python client library for the kube-controller-api project."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf",
    "grpcio",
]

[project.urls]
Homepage = "https://github.com/LogitsAI/kube-controller-api"
Issues = "https://github.com/LogitsAI/kube-controller-api/issues"
Repository = "https://github.com/LogitsAI/kube-controller-api.git"
